[package]
name = "xpra"
version = "0.2.0"
edition = "2024"

[dependencies]
serde_json = "1.0.140"
yaml-rust2 = "0.10.1"
log = { version = "0.4.27", features = ["max_level_debug", "release_max_level_info"] }
simple_logger = "5.0.0"
native-windows-gui = {  version = "1.0.13", features = ["high-dpi", ] }
turbojpeg = { version = "1.3.2", features = ["image"] }
spng = { version = "0.2.0-alpha.3" }
winapi = "0.3.9"
base64 = "0.22.1"
env = "1.0.1"
machine-uid = "0.5.3"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
